@@ -29,6 +29,9 @@
         <pitest.version>1.16.1</pitest.version>
         <pitest-junit5-plugin.version>1.2.1</pitest-junit5-plugin.version>
         <commons-codec.version>1.17.1</commons-codec.version>
+        <bytebuddy.version>1.15.11</bytebuddy.version>
+        <mockito.version>5.14.2</mockito.version>
+        <surefire.version>3.5.2</surefire.version>
     </properties>
 
     <dependencies>
@@ -86,6 +89,16 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+
+            <!-- Maven Surefire Plugin for running tests -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${surefire.version}</version>
+                <configuration>
+                    <argLine>-Dnet.bytebuddy.experimental=true ${argLine}</argLine>
+                </configuration>
             </plugin>
 
             <!-- JaCoCo Code Coverage Plugin -->
